[package]
name = "dtex"
version = "0.0.0"
edition = "2021"

[dependencies]
# Efficient allocator
mimalloc = { version = "0.1", default-features = false }
# Terminal UI
tui = { git = "https://github.com/Virgiel/tui" }
# Line editor tool
reedline = "0.20.0"
# Fast lexical conversion
lexical-core = "0.8.5"
# CLI args parser
clap = { version = "4.3.0", features = ["derive"] }
# Efficient oneshot channel
oneshot = "0.1.5"
# Lazy values
once_cell = "1.17.2"
# File system watcher
notify = "6.0.0"
notify-debouncer-full = "0.2.0"
# Sql parser
sqlparser = "0.34.0"
arrow = { git = "https://github.com/apache/arrow-rs", features = [
    "ffi",
], default-features = false }
libduckdb-sys = { git = "https://github.com/Virgiel/duckdb-rs-tmp", features = [
    "parquet",
    "json",
] }

# Data frame engine
[workspace]
members = ["py-dtex"]
