[package]
name = "dtex"
version = "0.0.0"
edition = "2021"

[dependencies]
# Efficient allocator
mimalloc = { version = "0.1", default-features = false }
# Terminal UI
tui = { git = "https://github.com/Virgiel/tui" }
# Line editor tool
reedline = "0.26.0"
# Fast lexical conversion
lexical-core = "0.8.5"
# CLI args parser
clap = { version = "4.4.4", features = ["derive"] }
# Efficient oneshot channel
oneshot = "0.1.6"
# Lazy values
once_cell = "1.18.0"
# File system watcher
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
# Sql parser
sqlparser = "0.39.0"
arrow = { version = "49.0.0", default-features = false, features = ["ffi"] }
libduckdb-sys = { git = "https://github.com/Virgiel/duckdb-rs", features = [
    "parquet",
    "json",
] }

# Data frame engine
[workspace]
members = ["py-dtex"]
